--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,5 +14,13 @@
  limitations under the License.
 -->
 <resources>
-    <style name="MaterialTheme" parent="android:Theme.Material.Light.NoActionBar.Fullscreen" />
+
+  <style name="MaterialTheme" parent="@android:style/Theme.Material.Light.NoActionBar.Fullscreen">
+    <!-- Customize your theme here. -->
+    <item name="android:colorPrimary">@color/colorPrimary</item>
+    <!--   darker variant for the status bar and contextual app bars -->
+    <item name="android:colorPrimaryDark">@color/colorPrimaryDark</item>
+    <!--   theme UI controls like checkboxes and text fields -->
+    <item name="android:colorAccent">@color/colorAccent</item>
+  </style>
 </resources>
