--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,9 @@
  limitations under the License.
 -->
 <resources>
-    <color name="control_background">#cc4285f4</color>
+  <color name="control_background">#cc4285f4</color>
   <color name="down_bar">#80000000</color>
+  <color name="colorAccent">#eeba30</color>
+  <color name="colorPrimary">#ae0001</color>
+  <color name="colorPrimaryDark">#740001</color>
 </resources>
